# agl-frame-extractor

./: .gitignore  README.md  flake.nix  pyproject.toml  setup.py
.github/workflows/: python-package.yml
agl_frame_extractor/: __init__.py  extractor.py
tests/: test_extractor.py
